--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -177,6 +177,7 @@
     </style>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
 
     <script>
         function handleSubmit(event) {
@@ -420,6 +421,10 @@
     <div class="d-flex justify-content-center">
         <!-- stats container -->
         <div id='chart' class='chart'></div>
+        <script>
+            var data = {{ graphJSON|safe }};
+            Plotly.newPlot('chart', data);
+        </script>
         <!-- types container -->
         <div id="types-container" class="types-container" ></div>
         <!-- image container -->
@@ -428,9 +433,5 @@
         <div id="registerer-container" class="registerer-container" ></div>
     </div>
 </body>
-<script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
-<script type='text/javascript'>
-  var graphs = "{{ graphJSON | safe }}";
-  Plotly.plot('chart',graphs,{});
-</script>
+
 </html>
